--- a/app/views/v3/dashboard-root.html
+++ b/app/views/v3/dashboard-root.html
@@ -35,21 +35,21 @@
   </div>
 
   <div class="govuk-cards--2__item govuk-cards--2__item--dashboard">
-    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Partner organisations</h2>
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Organisations</h2>
 
     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
       <span class="govuk-visually-hidden">There are currently</span>
         90
-      <span class="govuk-visually-hidden">partner organisations in the system</span>
+      <span class="govuk-visually-hidden">organisations in the system</span>
     </p>
 
     <ul class="govuk-list">
       <li>
-        <a href="/v3/organisation-add" class="govuk-link">Add a new partner organisation</a>
+        <a href="/v3/organisation-add" class="govuk-link">Add a new organisation</a>
       </li>
 
       <li>
-        <a href="/v3/organisation-list" class="govuk-link">View partner organisations</a>
+        <a href="/v3/organisation-list" class="govuk-link">View organisations</a>
       </li>
     </ul>
   </div>
@@ -69,7 +69,7 @@
       </li>
 
       <li>
-        <a href="#" class="govuk-link">Upload multiple new users</a>
+        <a href="#" class="govuk-link">Upload file to add new users</a>
       </li>
 
       <li>
