--- a/app/views/v3/dashboard-service-health-assessment.html
+++ b/app/views/v3/dashboard-service-health-assessment.html
@@ -15,21 +15,21 @@
 
 <div class="govuk-cards govuk-cards--2">
   <div class="govuk-cards--2__item govuk-card--dashboard">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Partner organisations</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Organisations</h2>
 
     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
       <span class="govuk-visually-hidden">There are currently</span>
       2
-      <span class="govuk-visually-hidden">partner organisations in the system</span>
+      <span class="govuk-visually-hidden">organisations in the system</span>
     </p>
 
     <ul class="govuk-list">
       <li>
-        <a href="organisation-add-health-assessment" class="govuk-link">Add new partner organisation</a>
+        <a href="organisation-add-health-assessment" class="govuk-link">Add new organisation</a>
       </li>
 
       <li>
-        <a href="organisation-list-health-assessment" class="govuk-link">View all partner organisations</a>
+        <a href="organisation-list-health-assessment" class="govuk-link">View all organisations</a>
       </li>
     </ul>
   </div>
@@ -49,7 +49,7 @@
       </li>
 
       <li>
-        <a href="#" class="govuk-link">Add multiple new users</a>
+        <a href="#" class="govuk-link">Upload file to add new users</a>
       </li>
 
       <li>
