--- a/app/views/v3/includes/nav.html
+++ b/app/views/v3/includes/nav.html
@@ -9,7 +9,7 @@
         </li>
 
         <li>
-            <a href="/v3/organisation-list" {% if activeNav == 'organisations' %}class="active" aria-current="page"{% endif %}>Partner organisations</a>
+            <a href="/v3/organisation-list" {% if activeNav == 'organisations' %}class="active" aria-current="page"{% endif %}>Organisations</a>
         </li>
 
         <li>
