--- a/app/views/v3/includes/user-access-rights-capita.html
+++ b/app/views/v3/includes/user-access-rights-capita.html
@@ -9,18 +9,18 @@
   },
   items: [
     {
-      value: "Organisation Admin",
-      text: "Organisation Admin",
+      value: "Organisation admin",
+      text: "Organisation admin",
       hint: {
-        html: "Admin for a set of users who do not work for DWP, such as a supplier or local authority<br>Invite users who don’t work for DWP to their service"
+        html: "Invite users who work for their organisation to use this service"
       },
-      checked: checked("['operator-admin-access-rights']", "Organisation Admin")
+      checked: checked("['operator-admin-access-rights']", "Organisation admin")
     },
     {
       value: "User",
       text: "User",
       hint: {
-        text: "Can access the service"
+        text: "Can access a service"
       },
       checked: checked("['user-access-rights']", "User")
     }
