--- a/app/views/v3/organisation-list-health-assessment.html
+++ b/app/views/v3/organisation-list-health-assessment.html
@@ -11,9 +11,9 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l listing-page">Partner organisations using Health Assessments</h1>
+            <h1 class="govuk-heading-l listing-page">Organisations using Health Assessments</h1>
 
-            <a href="organisation-add-health-assessment" class="govuk-button listing-page">Add new partner organisation</a>
+            <a href="organisation-add-health-assessment" class="govuk-button listing-page">Add new organisation</a>
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
