--- a/app/views/v3/includes/user-access-rights-health-assessment.html
+++ b/app/views/v3/includes/user-access-rights-health-assessment.html
@@ -9,26 +9,26 @@
   },
   items: [
     {
-      value: "Service Admin",
-      text: "Service Admin",
+      value: "Service admin",
+      text: "Service admin",
       hint: {
-        html: "Admin for one service<br>Invite users to their service<br>{third party?}"
+        html: "Admin for one service<br>Invite users to their service"
       },
-      checked: checked("['user-access-rights']", "Service Admin")
+      checked: checked("['user-access-rights']", "Service admin")
     },
     {
-      value: "Organisation Admin",
-      text: "Organisation Admin",
+      value: "Organisation admin",
+      text: "Organisation admin",
       hint: {
-        html: "Admin for a set of users who do not work for DWP, such as a supplier or local authority<br>Invite users who don’t work for DWP to their service"
+        html: "Invite users who work for their organisation to use this service"
       },
-      checked: checked("['operator-admin-access-rights']", "Organisation Admin")
+      checked: checked("['operator-admin-access-rights']", "Organisation admin")
     },
     {
       value: "User",
       text: "User",
       hint: {
-        text: "Can access the service"
+        text: "Can access a service"
       },
       checked: checked("['user-access-rights']", "User")
     }
