--- a/app/views/v3/includes/user-access-rights.html
+++ b/app/views/v3/includes/user-access-rights.html
@@ -9,34 +9,34 @@
   },
   items: [
     {
-      value: "Super Admin",
-      text: "Super Admin",
+      value: "System admin",
+      text: "System admin",
       hint: {
         html: "Add a group of services, used by a specific part of DWP<br>Invite group admins<br>Add a set of users who do not work for DWP, such as a supplier or a local authority<br>Add a service<br>Invite service admins"
       },
-      checked: checked("['user-access-rights']", "Super Admin")
+      checked: checked("['user-access-rights']", "System admin")
     },
     {
-      value: "Service Admin",
-      text: "Service Admin",
+      value: "Service admin",
+      text: "Service admin",
       hint: {
-        html: "Admin for one service<br>Invite users to their service<br>{third party?}"
+        html: "Admin for one service<br>Invite users to their service"
       },
-      checked: checked("['user-access-rights']", "Service Admin")
+      checked: checked("['user-access-rights']", "Service admin")
     },
     {
-      value: "Organisation Admin",
-      text: "Organisation Admin",
+      value: "Organisation admin",
+      text: "Organisation admin",
       hint: {
-        html: "Admin for a set of users who do not work for DWP, such as a supplier or local authority<br>Invite users who don’t work for DWP to their service"
+        html: "Invite users who work for their organisation to use this service"
       },
-      checked: checked("['operator-admin-access-rights']", "Organisation Admin")
+      checked: checked("['operator-admin-access-rights']", "Organisation admin")
     },
     {
       value: "User",
       text: "User",
       hint: {
-        text: "Can access the service"
+        text: "Can access a service"
       },
       checked: checked("['user-access-rights']", "User")
     }
