--- a/app/views/v3/organisation-add.html
+++ b/app/views/v3/organisation-add.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Add new partner organisation - {{serviceName}}
+  Add new organisation - {{serviceName}}
 {% endblock %}
 
 {% block header %}
@@ -16,15 +16,17 @@
             <form action="organisation-confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                    text: "Add a partner organisation",
+                    html: '<span class="govuk-caption-l">Add a new organisation</span>Organisation details',
                     classes: "govuk-fieldset__legend--l",
                     isPageHeading: true
                     }
                 })}}
 
+                <p>Add the name of the organisation and the details of the person you are inviting as the admin.</p>
+
                 {{ govukInput({
                     label: {
-                    text: "Partner organisation name"
+                    text: "Organisation name"
                     },
                     id: "organisation-name",
                     name: "organisation-name",
@@ -33,7 +35,7 @@
 
                 {{ govukInput({
                     label: {
-                    text: "Admin full name"
+                    text: "Full name of admin for this organisation"
                     },
                     id: "organisation-admin-full-name",
                     name: "organisation-admin-full-name",
@@ -42,7 +44,7 @@
 
                 {{ govukInput({
                     label: {
-                    text: "Admin email address"
+                    text: "Admin's email address"
                     },
                     id: "organisation-admin-email-address",
                     name: "organisation-admin-email-address",
