--- a/app/views/v3/user-add-super.html
+++ b/app/views/v3/user-add-super.html
@@ -16,7 +16,7 @@
             <form action="user-confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: '<span class="govuk-caption-l">Add a new super admin</span>Super admin details',
+                        html: '<span class="govuk-caption-l">Add a new system admin</span>System admin details',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
@@ -24,7 +24,7 @@
 
                 {{ govukInput({
                     label: {
-                        text: "Name"
+                        text: "Full name"
                     },
                     id: "user-full-name",
                     name: "user-full-name",
