--- a/app/views/v3/user-add-user.html
+++ b/app/views/v3/user-add-user.html
@@ -54,7 +54,7 @@
 
                 {{ govukInput({
                     label: {
-                        text: "Name"
+                        text: "Full name"
                     },
                     id: "user-full-name",
                     name: "user-full-name",
