Add all the new edit service steps in

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -80,6 +80,9 @@
                 <li>
                     Various content updates
                 </li>
+                <li>
+                    Updated 'service add' journey from dev feedback for system admins
+                </li>
             </ul>
 
             <a href="/v3/dashboard-root" class="govuk-button">View as System admin</a>
@@ -120,12 +123,12 @@
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v3/dashboard-root">Super admin dashboard</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v3/dashboard-service-health-assessment">Service admin dashboard</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -135,7 +138,7 @@
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v3/service-add">Add a new service</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                     </tr>
 
                     <tr class="govuk-table__row">
