--- a/app/views/v3/dashboard-service-health-assessment.html
+++ b/app/views/v3/dashboard-service-health-assessment.html
@@ -15,6 +15,16 @@
 
 <div class="govuk-cards govuk-cards--2">
   <div class="govuk-cards--2__item govuk-card--dashboard">
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Your service</h2>
+
+    <ul class="govuk-list">
+      <li>
+        <a href="service-edit" class="govuk-link">Edit your service</a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="govuk-cards--2__item govuk-card--dashboard">
     <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Organisations</h2>
 
     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
