--- a/app/views/v3/includes/nav-service.html
+++ b/app/views/v3/includes/nav-service.html
@@ -5,7 +5,7 @@
         </li>
 
         <li>
-            <a href="/v3/organisation-list-health-assessment" {% if activeNav == 'organisations' %}class="active" aria-current="page"{% endif %}>Partner organisations</a>
+            <a href="/v3/organisation-list-health-assessment" {% if activeNav == 'organisations' %}class="active" aria-current="page"{% endif %}>Organisations</a>
         </li>
 
         <li>
