--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,35 +17,25 @@
         </h2>
 
         {% set currentVersionHtml %}
-            <time datetime="2019-10-24" class="govuk-caption-l">24 October 2019</time>
+            <time datetime="2019-10-31" class="govuk-caption-l">31 October 2019</time>
 
-            <h2 class="govuk-heading-l">v3</h2>
-
-            <h3 class="govuk-heading-m">UR Goals</h3>
+            <h2 class="govuk-heading-l">MVP v1</h2>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    lorem ipsum dolor sit amet consectetur
-                </li>
-
-                <li>
-                    lorem ipsum dolor sit amet consectetur
-
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li>
-                            lorem ipsum dolor sit amet consectetur
-                        </li>
-
-                        <li>
-                            lorem ipsum dolor sit amet consectetur
-                        </li>
-
-                        <li>
-                            lorem ipsum dolor sit amet consectetur
-                        </li>
-                    </ul>
+                    Slim down files to show only service admin routes
                 </li>
             </ul>
+
+            <a href="/mvp1/dashboard-service-health-assessment" class="govuk-button">View MVP prototype</a>
+
+            <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+            <h3 class="govuk-heading-m">General changes</h3>
+
+            <time datetime="2019-10-24" class="govuk-caption-l">24 October 2019</time>
+
+            <h2 class="govuk-heading-l">v3</h2>
 
             <h3 class="govuk-heading-m">General changes</h3>
 
@@ -82,6 +72,9 @@
                 </li>
                 <li>
                     Updated 'service add' journey from dev feedback for system admins
+                </li>
+                <li>
+                    Updated 'service edit' journey to match new 'service add' steps
                 </li>
             </ul>
 
