Change Health Assessment to PRaP

--- a/app/views/mvp1/user-add-user-prap.html
+++ b/app/views/mvp1/user-add-user-prap.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-confirmation-health-assessment" method="post" class="form">
+            <form action="user-confirmation-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                         html: '<span class="govuk-caption-l">Add a new user</span>User details',
