--- a/app/views/mvp1/user-confirmation-prap.html
+++ b/app/views/mvp1/user-confirmation-prap.html
@@ -17,9 +17,9 @@
 
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
-      <a href="user-list-health-assessment" class="govuk-link">View all users</a><br>
-      <a href="user-add-health-assessment" class="govuk-link">Add another user</a><br>
-      <a href="dashboard-service-health-assessment" class="govuk-link">Go to the dashboard</a>
+      <a href="user-list-prap" class="govuk-link">View all users</a><br>
+      <a href="user-add-user-prap" class="govuk-link">Add another user</a><br>
+      <a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a>
     </div>
   </div>
 {% endblock %}
