--- a/app/views/mvp1/dashboard-service-prap.html
+++ b/app/views/mvp1/dashboard-service-prap.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Dashboard - Health Assessment - {{serviceName}}
+  Dashboard - PRaP - {{serviceName}}
 {% endblock %}
 
 {% block header %}
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">Health Assessment</h1>
+<h1 class="govuk-heading-l">Provider Referrals and Payments (PRaP)</h1>
 
 <div class="govuk-cards govuk-cards--2">
   <div class="govuk-cards--2__item govuk-card--dashboard">
@@ -23,11 +23,11 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="organisation-add-health-assessment" class="govuk-link">Add new organisation</a>
+        <a href="organisation-add-prap" class="govuk-link">Add new organisation</a>
       </li>
 
       <li>
-        <a href="organisation-list-health-assessment" class="govuk-link">View all organisations</a>
+        <a href="organisation-list-prap" class="govuk-link">View all organisations</a>
       </li>
     </ul>
   </div>
@@ -43,7 +43,7 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="user-add-health-assessment" class="govuk-link">Add a new user</a>
+        <a href="user-add-user-prap" class="govuk-link">Add a new user</a>
       </li>
 
       <li>
@@ -51,7 +51,7 @@
       </li>
 
       <li>
-        <a href="user-list-health-assessment" class="govuk-link">View all users</a>
+        <a href="user-list-prap" class="govuk-link">View all users</a>
       </ul>
   </div>
 </div>
