--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -11,7 +11,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add-health-assessment" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-user-prap" class="govuk-button listing-page">Add new user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -68,17 +68,17 @@
 
     <ul class="pagination">
       <li class="pagination__item">
-        <a class="pagination__link" href="user-list-health-assessment"  aria-label="Previous page">
+        <a class="pagination__link" href="user-list-prap"  aria-label="Previous page">
           <span aria-hidden="true" role="presentation">&laquo;</span> Previous
         </a>
       </li>
 
       <li class="pagination__item">
-        <a class="pagination__link" href="user-list-health-assessment" aria-label="Page 1">1</a>
+        <a class="pagination__link" href="user-list-prap" aria-label="Page 1">1</a>
       </li>
 
       <li class="pagination__item">
-        <a class="pagination__link current" href="user-list-health-assessment-2" aria-label="Page 2">2</a>
+        <a class="pagination__link current" href="user-list-prap-2" aria-label="Page 2">2</a>
       </li>
 
       <li class="pagination__item">
@@ -90,6 +90,6 @@
   </nav>
 
   <p class="govuk-!-margin-top-9">
-    <a href="dashboard-service-health-assessment" class="govuk-link">Back to dashboard</a>
+    <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
   </p>
 {% endblock %}
