--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -11,7 +11,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add-health-assessment" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-user-prap" class="govuk-button listing-page">Add new user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -125,11 +125,11 @@
       </li>
 
       <li class="pagination__item">
-        <a class="pagination__link" href="user-list-health-assessment-2" aria-label="Page 2">2</a>
+        <a class="pagination__link" href="user-list-user-prap-2" aria-label="Page 2">2</a>
       </li>
 
       <li class="pagination__item">
-        <a class="pagination__link" href="user-list-health-assessment-2" aria-label="Next page">
+        <a class="pagination__link" href="user-list-user-prap-2" aria-label="Next page">
           Next <span aria-hidden="true" role="presentation">&raquo;</span>
         </a>
       </li>
@@ -137,6 +137,6 @@
   </nav>
 
   <p class="govuk-!-margin-top-9">
-    <a href="dashboard-service-health-assessment" class="govuk-link">Back to dashboard</a>
+    <a href="dashboard-service-user-prap" class="govuk-link">Back to dashboard</a>
   </p>
 {% endblock %}
