--- a/app/views/mvp1/organisation-confirmation-prap.html
+++ b/app/views/mvp1/organisation-confirmation-prap.html
@@ -17,9 +17,9 @@
 
     <p>An invitation has been sent to {{data['organisation-admin-email-address']}}</p>
 
-    <a href="organisation-list-health-assessment" class="govuk-link">View all organisations</a><br>
-    <a href="organisation-add-health-assessment" class="govuk-link">Add another organisation</a><br>
-    <a href="dashboard-service-health-assessment" class="govuk-link">Go to the dashboard</a>
+    <a href="organisation-list-prap" class="govuk-link">View all organisations</a><br>
+    <a href="organisation-add-prap" class="govuk-link">Add another organisation</a><br>
+    <a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a>
   </div>
 </div>
 {% endblock %}
