Change Org list page for PRaP

--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l listing-page">Organisations using Health Assessments</h1>
+            <h1 class="govuk-heading-l listing-page">Organisations using PRaP</h1>
 
             <a href="organisation-add-prap" class="govuk-button listing-page">Add new organisation</a>
 
@@ -30,13 +30,13 @@
                     {% endif %}
 
                     <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header"><a href="organisation-edit" class="govuk-link">G3S</a></th>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list" class="govuk-link">37</a></td>
+                        <th scope="row" class="govuk-table__header">G3S</th>
+                        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list-prap" class="govuk-link">37</a></td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header"><a href="organisation-edit" class="govuk-link">Providers R Us</a></th>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list" class="govuk-link">31</a></td>
+                        <th scope="row" class="govuk-table__header">Providers R Us</th>
+                        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list-prap" class="govuk-link">31</a></td>
                     </tr>
                 </tbody>
             </table>
