--- a/app/views/mvp1/organisation-add-prap.html
+++ b/app/views/mvp1/organisation-add-prap.html
@@ -14,13 +14,11 @@
             <form action="organisation-confirmation-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                    html: '<span class="govuk-caption-l">Add a new organisation</span>Organisation details',
+                    html: 'Add a new organisation',
                     classes: "govuk-fieldset__legend--l",
                     isPageHeading: true
                     }
                 })}}
-
-                <p>Add the name of the organisation and the details of the person you are appointing as the admin.</p>
 
                 {{ govukInput({
                     label: {
@@ -28,25 +26,6 @@
                     },
                     id: "organisation-name",
                     name: "organisation-name",
-                    classes: "govuk-!-width-three-quarters"
-                }) }}
-
-                {{ govukInput({
-                    label: {
-                    text: "Full name of admin for this organisation"
-                    },
-                    id: "organisation-admin-full-name",
-                    name: "organisation-admin-full-name",
-                    classes: "govuk-!-width-three-quarters"
-                }) }}
-
-                {{ govukInput({
-                    label: {
-                    text: "Admin's email address"
-                    },
-                    id: "organisation-admin-email-address",
-                    name: "organisation-admin-email-address",
-                    type: "email",
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
