--- a/app/views/mvp1/organisation-confirmation-prap.html
+++ b/app/views/mvp1/organisation-confirmation-prap.html
@@ -12,10 +12,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     {{ govukPanel({
-      titleText: data["organisation-name"] + " organisation created"
+      titleText: data["organisation-name"] + " created"
     }) }}
-
-    <p>An invitation has been sent to {{data['organisation-admin-email-address']}}</p>
 
     <a href="organisation-list-prap" class="govuk-link">View all organisations</a><br>
     <a href="organisation-add-prap" class="govuk-link">Add another organisation</a><br>
