--- a/app/views/mvp1/user-view.html
+++ b/app/views/mvp1/user-view.html
@@ -11,112 +11,64 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l">Capita</span>User details
-    </h1>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-l">
+                <span class="govuk-caption-l">Capita</span>User details
+            </h1>
 
-    {{ govukSummaryList({
-        rows: [
-            {
-                key: {
-                    text: "Name"
-                },
-                value: {
-                    text: data['user-full-name']
-                },
-                actions: {
-                    items: [
-                        {
-                            href: "user-edit",
-                            text: "Change",
-                            visuallyHiddenText: "name"
+            {{ govukSummaryList({
+                rows: [
+                    {
+                        key: {
+                            text: "Name"
+                        },
+                        value: {
+                            text: data['user-full-name']
                         }
-                    ]
-                }
-            },
-            {
-                key: {
-                    text: "Email address"
-                },
-                value: {
-                    text: data['user-email-address']
-                },
-                actions: {
-                    items: [
-                        {
-                            href: "user-edit",
-                            text: "Change",
-                            visuallyHiddenText: "email address"
+                    },
+                    {
+                        key: {
+                            text: "Email address"
+                        },
+                        value: {
+                            text: data['user-email-address']
                         }
-                    ]
-                }
-            },
-            {
-                key: {
-                    text: "Phone number"
-                },
-                value: {
-                    text: data['user-phone-number']
-                },
-                actions: {
-                    items: [
-                        {
-                            href: "user-edit",
-                            text: "Change",
-                            visuallyHiddenText: "phone number"
+                    },
+                    {
+                        key: {
+                            text: "Status"
+                        },
+                        value: {
+                            html: '<span class="govuk-tag govuk-tag">Active</span>'
                         }
-                    ]
-                }
-            },
-            {
-                key: {
-                    text: "Access rights"
-                },
-                value: {
-                    text: data['user-access-rights']
-                },
-                actions: {
-                    items: [
-                        {
-                            href: "user-edit",
-                            text: "Change",
-                            visuallyHiddenText: "permissions"
+                    },
+                    {
+                        key: {
+                            text: "Last logged in"
+                        },
+                        value: {
+                            html: '21 October 2019'
                         }
-                    ]
-                }
-            },
-            {
-                key: {
-                    text: "Status"
-                },
-                value: {
-                    html: '<span class="govuk-tag govuk-tag">Active</span>'
-                }
-            },
-            {
-                key: {
-                    text: "Last logged in"
-                },
-                value: {
-                    html: '21 October 2019'
-                }
-            },
-            {
-                key: {
-                    text: "Created"
-                },
-                value: {
-                    html: '9 April 1982, 7:52pm'
-                }
-            }
-        ]
-    }) }}
+                    },
+                    {
+                        key: {
+                            text: "Created"
+                        },
+                        value: {
+                            html: '9 April 1982, 7:52pm'
+                        }
+                    }
+                ]
+            }) }}
 
-    <a href="#" class="govuk-button">Re-send invite</a>
-    <a href="#" class="govuk-button govuk-button--secondary">Suspend user</a>
-    <a href="#" class="govuk-button govuk-button--warning">Delete user</a>
+            <a href="#" class="govuk-button">Re-send invite</a>
+            <a href="#" class="govuk-button govuk-button--secondary">Suspend user</a>
+            <a href="#" class="govuk-button govuk-button--warning">Delete user</a>
 
-    <p class="govuk-!-margin-top-9">
-        <a href="user-list-capita" class="govuk-link">Back users list</a>
-    </p>
+            <p class="govuk-!-margin-top-9">
+                <a href="user-list-capita" class="govuk-link">Back users list</a>
+            </p>
+        </div>
+    </div>
 {% endblock %}
