--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -27,7 +27,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
         <td class="govuk-table__cell">-</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
       {% endif %}
 
@@ -40,25 +40,25 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gordon Strachan</a></th>
         <td class="govuk-table__cell">G3S</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--pending">Pending activation</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gary McAllister</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Tony Dorigo</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Mel Sterland</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -70,19 +70,19 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jackson Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jessie Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
     </tbody>
   </table>
