--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -26,19 +26,19 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jane Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joan Smith</a></th>
         <td class="govuk-table__cell">G3S</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">James Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -50,7 +50,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jack Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
     </tbody>
   </table>
