Remove edit link from dynamnically added org

--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -24,7 +24,7 @@
                 <tbody class="govuk-table__body">
                     {% if data['organisation-name'] %}
                     <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header"><a href="organisation-edit" class="govuk-link">{{ data['organisation-name'] }}</a></th>
+                        <th scope="row" class="govuk-table__header">{{ data['organisation-name'] }}</th>
                         <td class="govuk-table__cell govuk-table__cell--numeric">-</td>
                     </tr>
                     {% endif %}
