Change inactive to suspended

--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -44,7 +44,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joe Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Inactive</span></td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
       </tr>
 
       <tr class="govuk-table__row">
