Remove all files not needed for this MVP journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,9 @@
                 <li>
                     Slim down files to show only service admin routes
                 </li>
+                <li>
+                    Strip out lots of user information from user list, and user view
+                </li>
             </ul>
 
             <a href="/mvp1/dashboard-service-prap" class="govuk-button">View MVP prototype</a>
