Start getting example typeahead demo in place for org selection

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -297,3 +297,14 @@ a.pagination__link:focus {
 .govuk-tag--inactive {
     background-color: govuk-colour("dark-grey");
 }
+
+/**
+ * Autocomplete stuff
+ */
+.autocomplete__wrapper {
+    width: 50%;
+}
+
+.autocomplete__option {
+    font-family: "GDS Transport", Arial, sans-serif;
+}
