--- a/app/views/mvp1/dashboard-service-prap.html
+++ b/app/views/mvp1/dashboard-service-prap.html
@@ -43,7 +43,7 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="user-add-user-prap" class="govuk-link">Add a new user</a>
+        <a href="user-add-prap" class="govuk-link">Add a new user</a>
       </li>
 
       <li>
