--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -11,7 +11,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add-user-prap" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-prap" class="govuk-button listing-page">Add new user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
