--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,9 +28,12 @@
                 <li>
                     Strip out lots of user information from user list, and user view
                 </li>
+                <li>
+                    Make everything as if viewed by a PRaP service admin
+                </li>
             </ul>
 
-            <a href="/mvp1/dashboard-service-prap" class="govuk-button">View MVP prototype</a>
+            <a href="/mvp1/signin" class="govuk-button">View MVP prototype</a>
 
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
