Default typeahead value to empty

--- a/app/views/mvp1/user-add-prap.html
+++ b/app/views/mvp1/user-add-prap.html
@@ -321,7 +321,7 @@
 <script type="text/javascript" src="/public/javascripts/accessible-autocomplete.min.js"></script>
 <script type="text/javascript">
     accessibleAutocomplete.enhanceSelectElement({
-        defaultValue: 'Choose',
+        defaultValue: '',
         selectElement: document.getElementById('user-organisation')
     });
 </script>
