--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,7 +41,7 @@
 
             <time datetime="2019-10-24" class="govuk-caption-l">24 October 2019</time>
 
-            <h2 class="govuk-heading-l">v3</h2>
+            <h2 class="govuk-heading-l" id="v3">v3</h2>
 
             <h3 class="govuk-heading-m">General changes</h3>
 
